# project2

./: Astar.h  BDFS.h  BestFirstSearch.h  Bfs.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Container.h  ContainerQueue.h  ContainerStack.h  Dfs.h  FileCacheManager.cpp  FileCacheManager.h  HashFuncs.h  MatrixSearchable.cpp  MatrixSearchable.h  MyMatrixClientHandler.cpp  MyMatrixClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.h  README.md  SearchSolver.h  Searchable.h  Searcher.h  SearcherAbstruct.h  Server.h  Solver.h  Step.cpp  Step.h  StreamOverload.h  To_String.h  main.cpp
